# MediaX

./: .ai-rules.md  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: updater.key  updater.key.pub
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: autoprobe.rs  commands.rs  default_player.rs  feedback.rs  launch.rs  menu.rs  mod.rs  system_keep_awake.rs  tray.rs  updates.rs  windows.rs
src-tauri/src/app/autoprobe/: actions.rs  env.rs  mod.rs  ready.rs  util.rs
src-tauri/src/app/integration/: default_player.rs  dialogs.rs  mod.rs  updater.rs
src-tauri/src/app/media/: error.rs  library.rs  library_commands.rs  mod.rs  model.rs  playback.rs  processing.rs  snapshot.rs  state.rs  types.rs
src-tauri/src/app/media/lyrics/: apply.rs  cache.rs  candidate.rs  lrc.rs  mod.rs  orchestrator.rs  plain.rs  search.rs  selection.rs  text_encoding.rs  track_signature.rs
src-tauri/src/app/media/lyrics/provider/: kugou.rs  lrc_text.rs  lrcapi.rs  lrclib.rs  mod.rs  netease.rs
src-tauri/src/app/media/playback/: audio_shared.rs  debug_log.rs  decode_context.rs  dto.rs  events.rs  mod.rs
src-tauri/src/app/media/playback/decode_context/: hw_decode.rs  mod.rs  open.rs  output_size.rs  types.rs
src-tauri/src/app/media/playback/decode_context/open/: cover_art.rs  lyrics.rs  metadata.rs  mod.rs  stream_info.rs
src-tauri/src/app/media/playback/events/: mod.rs  payloads.rs
src-tauri/src/app/media/playback/rate/: control.rs  mod.rs  policy.rs  value.rs
src-tauri/src/app/media/playback/rate/policy/: audio_queue.rs  constants.rs  mod.rs  smoothing.rs  staging.rs  tests.rs  video.rs
src-tauri/src/app/media/playback/render/: mod.rs  picture_tune.rs  preview.rs  pts.rs  video_frame.rs  viewport_sync.rs
src-tauri/src/app/media/playback/render/preview/: context.rs  decode.rs  encoder.rs  mod.rs
src-tauri/src/app/media/playback/render/renderer/: frame_queue.rs  helpers.rs  mod.rs  playback_head.rs  renderer_frame_ops.rs  renderer_init.rs  renderer_present.rs  renderer_state.rs  renderer_types.rs  shader.wgsl  types.rs
src-tauri/src/app/media/playback/render/viewport_sync/: epoch.rs  mod.rs
src-tauri/src/app/media/playback/runtime/: audio.rs  audio_pipeline.rs  clock.rs  constants.rs  decode_params.rs  decode_runtime.rs  emit.rs  mod.rs  progress.rs  seek_control.rs  session.rs  stream_control.rs  sync_clock.rs  video_pipeline.rs
src-tauri/src/app/media/playback/runtime/audio_pipeline/: builder.rs  constants.rs  drain.rs  meter.rs  mod.rs  output.rs  priming.rs  time_stretch.rs  types.rs
src-tauri/src/app/media/playback/runtime/emit/: debug.rs  mod.rs  telemetry.rs
src-tauri/src/app/media/playback/runtime/loop_driver/: mod.rs  pacing.rs  packet_flow.rs  progress_emit.rs  tail.rs
src-tauri/src/app/media/playback/runtime/runtime_factory/: audio_pipeline.rs  diagnostics.rs  media_state.rs  metadata.rs  mod.rs  playback_gateway.rs  playback_snapshot.rs  source_flags.rs
src-tauri/src/app/media/playback/runtime/session/: cache_remux.rs  decode_loop_state.rs  mod.rs  recording_target.rs
src-tauri/src/app/media/playback/runtime/stream_control/: decode_thread.rs  error_events.rs  handles.rs  join.rs  lifecycle.rs  mod.rs  position.rs
src-tauri/src/app/media/playback/runtime/video_pipeline/: constants.rs  drain.rs  frame_pipeline.rs  frame_stats.rs  mod.rs  process_metrics.rs  stats.rs  telemetry.rs
src-tauri/src/app/media/playback/session/: commands.rs  constraints.rs  mod.rs  player_settings.rs  service.rs  source_path.rs
src-tauri/src/app/media/playback/session/commands/: cache.rs  debug.rs  mod.rs  preview.rs  session.rs  timing.rs
src-tauri/src/app/media/playback/session/coordinator/: audio_export_ops.rs  cache_ops.rs  helpers.rs  metadata_ops.rs  mod.rs  preview_ops.rs  timing_ops.rs
src-tauri/src/app/media/playback/sync/: engine.rs  mod.rs  presentation.rs  timeline.rs
src-tauri/src/app/media/player/: commands.rs  coordinator.rs  decode_context.rs  events.rs  mod.rs  playback.rs  preview.rs  preview_config.rs  renderer.rs  runtime.rs  state.rs  state_locks.rs  video_frame.rs  viewport_sync.rs
src-tauri/src/app/media/player/runtime/: clock.rs  progress.rs  seek_control.rs  session.rs  stream_control.rs  video_pipeline.rs
src-tauri/src/app/media/state/: controls.rs  domains.rs  mod.rs  snapshot.rs  stream_runtime.rs
src-tauri/src/app/media/state/stream_runtime/: epochs.rs  handles.rs  mod.rs  orphans.rs  pending_seek.rs  position.rs
src-tauri/src/app/media/tags/: cover.rs  mod.rs  write.rs
src-tauri/src/app/media/transcode/: commands.rs  mod.rs  processor.rs  state.rs  utils.rs
src-tauri/src/app/media/transcode/processor/: audio.rs  image.rs  mod.rs  progress.rs  video.rs
src-tauri/src/app/shell/: frontend_events.rs  menu.rs  mod.rs  open_request.rs  tray.rs  window_actions.rs
src-tauri/src/app/system_media_controls/: inner.rs  mod.rs
src-tauri/src/app/updates/: config.rs  dialogs.rs  logging.rs  macos.rs  mod.rs
src-tauri/src/app/windows/: commands.rs  lifecycle.rs  mod.rs  shared.rs  views.rs
(+298 files in other folders)
