[package]
name = "mediax"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
wgpu = "29.0.1"
pollster = "0.4.0"
rodio = "0.22.2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-next = { version = "7", default-features = false, features = [
    "static",
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ffmpeg-next = { version = "7", default-features = false, features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }

