[package]
name = "mediax"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `bundled-ffmpeg`: compile static FFmpeg during build (no system FFmpeg at runtime).
# Release：macOS/Ubuntu 传 `--features bundled-ffmpeg`；Windows 用 vcpkg + ffmpeg-next/static。
# 各平台 CI 与用户侧观感对照见仓库根 `.github/workflows/release.yml` 文件头注释表。
[features]
default = []
bundled-ffmpeg = ["ffmpeg-next/build"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-keepawake = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
wgpu = "29.0.1"
pollster = "0.4.0"
rodio = "0.22.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }
base64 = "0.22"
sysinfo = "0.38.4"
soundtouch = { version = "0.5.4", features = ["bundled"] }
webp = "0.3.1"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
mozjpeg = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-next = { version = "7", default-features = false, features = [
    "static",
    "codec",
    "filter",
    "format",
    "software-resampling",
    "software-scaling",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ffmpeg-next = { version = "7", default-features = false, features = [
    "codec",
    "filter",
    "format",
    "software-resampling",
    "software-scaling",
] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
